deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncedvideo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: gateway
    nginx.ingress.kubernetes.io/websocket-services: gateway
    ingress.kubernetes.io/proxy-read-timeout: "3600"
    ingress.kubernetes.io/proxy-send-timeout: "3600"
    ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.synced.video
    secretName: syncedvideo-tls
  rules:
    - host: "api.synced.video"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: syncedvideo-server
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: syncedvideo-server
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: syncedvideo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncedvideo-server
spec:
  selector:
    matchLabels:
      app: syncedvideo-server
  replicas: 1
  template:
    metadata:
      labels:
        app: syncedvideo-server
    spec:
      containers:
        - name: syncedvideo-server
          image: ghcr.io/syncedvideo/server:latest
          ports:
            - containerPort: 3000
